--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,9 @@
     margin-top: 25px;
     border-radius: 10px;
 }
-
+body{
+    overflow-y: hidden;
+}
 .popup{
     position: fixed;
     padding: 162px 0;
@@ -132,8 +134,9 @@
     min-height: 100vh;
     opacity: 1;
     background-color: rgba(0,0,0, .5);
+    overflow-y: auto;
+    max-height: 100%;
 }
-
 .popup__inner{
     width: calc(100% - 30px);
     max-width: 480px;
