--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,20 @@ body{
 .popup__button--right{
     margin-left: 15px;
 }
-
+.result__btn--active:hover, 
+.header__btn--active:hover, 
+.popup__button--active:hover{
+    box-shadow: 0 0 10px 0 rgba(18, 12, 213, 0.5);
+    background-color: #5c57ff;
+    transition: 0.5s;
+}
+.result__btn--active:focus, 
+.header__btn--active:focus, 
+.popup__button--active:focus{
+    color: #5c57ff;
+    background-color: #3f3cca;
+    transition: 0.5s;
+}
 @media (min-width: 1024px){
     .header__inner{
         width: calc(100% - 100px);
