--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,17 @@
     color: #fff;
     line-height: 1;
 }
+ 
+.header__btn--active:hover{
+    box-shadow: 0 0 10px 0 rgba(18, 12, 213, 0.5);
+    background-color: #5c57ff;
+    transition: 0.5s;
+} 
+.header__btn--active:focus{
+    color: #5c57ff;
+    background-color: #3f3cca;
+    transition: 0.5s;
+}
 
 .content {
     min-height: 100vh;
@@ -114,7 +125,16 @@
     letter-spacing: 1.5px;
     line-height: 1.2;
 }
-
+.result__btn--active:hover{
+    box-shadow: 0 0 10px 0 rgba(18, 12, 213, 0.5);
+    background-color: #5c57ff;
+    transition: 0.5s;
+}
+.result__btn--active:focus{
+    color: #5c57ff;
+    background-color: #3f3cca;
+    transition: 0.5s;
+}
 .presentation {
     width: 100%;
     height: 61.3vw;
@@ -211,15 +231,13 @@ body{
 .popup__button--right{
     margin-left: 15px;
 }
-.result__btn--active:hover, 
-.header__btn--active:hover, 
+
 .popup__button--active:hover{
     box-shadow: 0 0 10px 0 rgba(18, 12, 213, 0.5);
     background-color: #5c57ff;
     transition: 0.5s;
 }
-.result__btn--active:focus, 
-.header__btn--active:focus, 
+
 .popup__button--active:focus{
     color: #5c57ff;
     background-color: #3f3cca;
