--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@
     font-weight: normal;
 }
 
-.form__notify{
+.form__error{
     display: block;
     font-size: 18px;
     padding: 2px 0 0 1px;
@@ -41,7 +41,7 @@
     margin: 0 auto;
     outline: none;
     width: 319px;
-    padding: 22px 14px 20px 20px;
+    padding: 0 20px;
     height: 50px;
     border: solid 1px #d2defc;
     font-size: 18px;
@@ -91,4 +91,18 @@
     line-height: 1.35;
     letter-spacing: 1px;
     text-transform: uppercase;
+    cursor: pointer;
+}
+.form__button:hover{
+    box-shadow: 0 0 10px 0 rgba(18, 12, 213, 0.5);
+}
+
+.form__button:focus{
+    color: #5c57ff;
+    background-color: #3f3cca;
+}
+
+.form__button:disabled{
+    color:#fff;
+    background-color: #d2defc;
 }
