--- a/css/users.css
+++ b/css/users.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'DM Sans', sans-serif;
-    font-size: 14px;
 }
 
 .header{
@@ -13,7 +12,7 @@
     background-color: #f7f7f7;
 }
 
-.header__wrapper{
+.header__inner{
     width: 730px;
     margin: 0 auto;
     margin-top: 12px;
@@ -49,18 +48,20 @@
     width: 26px;
     background-color: #fff;
 }
-
+.header__user-info{
+    margin-left: 217px;
+    display: flex;
+    align-items: center;
+    margin: -4px 0 0 218px;
+}
 .header__text{
-    display: block;
-    margin-top: -5px;
-    max-width: 200px;
-    text-align: right;
-    margin-left: auto;
+    font-size: 14px;
     font-weight: bold;
     line-height: 1.71;
+    white-space: nowrap;
 }
 .header__exit-btn{
-    padding: 0 0 8px 11px;
+    padding: 0 0 4px 11px;
     margin-left: 15px;
     cursor: pointer;
 }
@@ -71,7 +72,7 @@
     padding: 86px 0 49px 0;
 }
 
-.content__wrapper{
+.content__inner{
     width: 730px;
     margin: 0 auto;
 }
@@ -90,6 +91,7 @@
 .table__title{
     padding: 19px 0 21px 0;
     text-transform: capitalize;
+    font-size: 14px;
     font-weight: 500;
     line-height: 1.71;
     text-align: left;
@@ -114,6 +116,7 @@
     background-color: #fff;
 }
 .table-item__text{
+    font-size: 14px;
     line-height: 1.5;
     text-align: left;
 }
@@ -152,14 +155,13 @@
     width: 730px;
     padding-top: 15px;
 }
-.pagination__wrapper{
+.pagination__inner{
     width: 647px;
     margin: 0 42px 0 41px;
     display: flex;
     align-items: center;
 }
 .pagination__icon{
-    cursor: pointer;
     width: 12px;
     height: 12px;
 }
@@ -169,6 +171,7 @@
     border: none;
     cursor: pointer;
     background-color: #ffce00;
+    font-size: 14px;
     line-height: 1.71;
     position: relative;
 }
@@ -208,6 +211,7 @@
     height: 40px;
     position: relative;
     padding-right: 21px;
+    font-size: 14px;
 }
 .pagination__selector-btn::after{
     content: url(../img/selector-icon.svg);
@@ -223,6 +227,7 @@
 .pagination__page-info{
     margin-left: 49px;
     display: block;
+    font-size: 14px;
     width: 90px;
     line-height: 1.5;
     white-space: nowrap;
