rename popup__inner for popup__wrapper in users.html and users.css

--- a/css/users.css
+++ b/css/users.css
@@ -251,7 +251,7 @@
     opacity: 1;
     pointer-events: all;
 }
-.popup__inner{
+.popup__wrapper{
     width: calc(100% - 30px);
     max-width: 405px;
     height: 438px;
